LDAP support, not working config yet

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -32,6 +32,13 @@ resources.db.params.password = SENTRIFUGO_PASSWORD
 resources.db.params.dbname = SENTRIFUGO_DBNAME
 resources.db.isDefaultTableAdapter = true
 
+ldap.server1.host = "ldaps://brat-dom-002.main.intgin.net"
+ldap.server1.port = 636
+ldap.server1.useSsl = true
+ldap.server1.accountDomainName = main.intgin.net
+ldap.server1.accountDomainNameShort = MAIN
+ldap.server1.accountCanonicalForm = 3
+ldap.server1.baseDn = "OU=Employees,OU=Brat,OU=SK,OU=EU,DC=main,DC=intgin,DC=net"
 
 
 [staging : production]
